Fixed the overlaping dashboard menu.

--- a/app/assets/stylesheets/dashboard/dashboard-user.css
+++ b/app/assets/stylesheets/dashboard/dashboard-user.css
@@ -8,8 +8,8 @@
   cursor: pointer;
 }
 
-.dashboard-user .negative-row {
-  margin-top: -50px;
+.dashboard-user .top-buffer {
+  margin-top: 5px;
 }
 
 .dashboard-user .main-content {
